# entui

./: Cargo.toml  README.md
src/: app.rs  entropy.rs  main.rs  ui.rs
