[package]
name = "entui"
description = "A file entropy visualization in the terminal with a nice interface"
version = "0.1.1"
edition = "2024"
license = "MIT"
homepage = "https://github.com/sergiogarciadev/entui"
repository = "https://github.com/sergiogarciadev/entui.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
